--- a/app/docker/Dockerfile.cyberchef
+++ b/app/docker/Dockerfile.cyberchef
@@ -1,4 +1,4 @@
 ARG NGINX_TAG=alpine
 FROM "nginx:$NGINX_TAG"
 
-ADD --chown=nginx:nginx https://gchq.github.io/CyberChef/cyberchef.htm /usr/share/nginx/html/index.html
+ADD --chown=nginx:nginx https://gchq.github.io/CyberChef/index.html /usr/share/nginx/html/index.html
