--- a/app/docker/docker-compose.consul.yml
+++ b/app/docker/docker-compose.consul.yml
@@ -4,7 +4,7 @@ services:
 
   consul:
     container_name: dab_consul
-    image: "consul:${DAB_APPS_CONSUL_TAG:-latest}"
+    image: "hashicorp/consul:${DAB_APPS_CONSUL_TAG:-latest}"
     restart: on-failure
     labels:
       description: 'Services discovery and key value store'
