--- a/app/docker/Dockerfile.ansible
+++ b/app/docker/Dockerfile.ansible
@@ -1,18 +1,23 @@
 FROM alpine:3.10.0
 
 RUN apk add --no-cache --virtual build-dependencies \
-      gcc musl-dev libffi-dev openssl-dev python-dev \
+      gcc musl-dev libffi-dev openssl-dev python3-dev \
  && apk add --no-cache \
-      bash curl tar openssh-client sshpass git python py-boto py-dateutil \
+      bash curl tar openssh-client sshpass git python3 py-boto py-dateutil \
       py-httplib2 py-jinja2 py-paramiko py-pip ca-certificates docker \
- && pip install python-keyczar docker-compose
+ && python3 -m pip install --upgrade pip \
+ && pip install python-keyczar
+
+RUN DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker} \
+      mkdir -p $DOCKER_CONFIG/cli-plugins
+ADD https://github.com/docker/compose/releases/download/v2.25.0/docker-compose-linux-x86_64 $HOME/.docker/cli-plugins/docker-compose
 
 RUN mkdir -p /etc/ansible /ansible/playbooks \
  && echo "[local]" >> /etc/ansible/hosts \
  && echo "localhost" >> /etc/ansible/hosts
 WORKDIR /ansible/playbooks
 
-ARG ANSIBLE_VERSION=2.7.1
+ARG ANSIBLE_VERSION=2.11
 ENV ANSIBLE_VERSION="${ANSIBLE_VERSION}" \
     ANSIBLE_GATHERING=smart \
     ANSIBLE_HOST_KEY_CHECKING=false \
