--- a/app/docker/Dockerfile.cartography
+++ b/app/docker/Dockerfile.cartography
@@ -1,5 +1,6 @@
 FROM python:3
 
-RUN pip install cartography
+RUN python3 -m pip install --upgrade pip && \
+    pip install cartography
 
 ENTRYPOINT ["/usr/local/bin/cartography","--neo4j-uri=bolt://neo4j:7687"]
