--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
 
   'Danger Automated Code Review':
     docker:
-      - image: circleci/node:latest
+      - image: cimg/node:latest
     steps:
       - checkout
 
@@ -85,14 +85,6 @@ jobs:
     steps:
 
       - checkout
-
-      - run:
-          name: Install Docker Compose v2
-          command: |
-            DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
-            mkdir -p $DOCKER_CONFIG/cli-plugins
-            curl -SL https://github.com/docker/compose/releases/download/v2.25.0/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
-            chmod +x "$DOCKER_CONFIG/cli-plugins/docker-compose"
 
       - run:
           name: Build Image
