--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
 
   'Danger Automated Code Review':
     docker:
-      - image: cimg/node:latest
+      - image: cimg/node:lts
     steps:
       - checkout
 
