Debugging network recreate issue

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     stdin_open: true
 
   build:
-    image: docker/compose:1.23.2
+    image: docker:25.0.5-cli
     command: build --force-rm --pull dab
     working_dir: /opt/dab/tests
     volumes:
